--- a/app/src/main/res/layout/activity_snackbar.xml
+++ b/app/src/main/res/layout/activity_snackbar.xml
@@ -8,6 +8,7 @@
     tools:context=".snackbar.SnackbarActivity">
 
     <LinearLayout
+        android:layout_gravity="center_vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
